@@ -1,5 +1,10 @@
 2013-01-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* sysdeps/powerpc/dfpu/numdigits.h (numdigits): Define the decimal bias
+	masks in an endianess neutral way.
+
+2013-01-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* sysdeps/powerpc/dfpu/fe_decround.c (__fe_dec_getround): Fix endianess
 	issues when getting the rounding mode.
 	* sysdeps/powerpc/fpu/fenv_libdfp.h (fenv_union_t): (fenv_union_t): 
